--- a/style.css
+++ b/style.css
@@ -22,8 +22,10 @@ section .container {
   align-items: center;
   justify-content: center;
   padding: 10px;
-  background: rgb(240, 235, 246);
+  background: rgb(157, 222, 188);
   border-radius: 25px;
+  border: 4px solid rgb(15, 173, 68);
+  box-shadow: -6px 6px 4px rgba(23, 1, 14, 0.171);
 }
 
 .swiper {
@@ -42,8 +44,9 @@ section .card .image {
   height: 700px;
   /* width: 50%; */
   border-radius: 20px;
-  padding: 40px;
-  background: rgb(7, 122, 130);
+  border: 4px solid wheat;
+  padding: 8px;
+  background: rgb(251, 254, 254);
   /* display: none; */
 }
 section .card .image img {
@@ -51,7 +54,7 @@ section .card .image img {
   width: 100%;
   object-fit: cover;
   border-radius: 20px;
-  border: 3px solid white;
+  /* border: 5px solid white; */
 }
 
 .card {
@@ -72,16 +75,35 @@ span.swiper-pagination-bullet {
   height: 7px;
   width: 20px;
   border-radius: 25px;
-  background: firebrick;
+  background: rgb(7, 145, 56);
+  margin-top: 4px;
 }
 
-.swiper-button-next:after,
-.swiper-button-prev:after {
+div.swiper-button-next,
+div.swiper-button-prev {
   color: aliceblue;
   font-weight: bold;
-  display: ;
+  /* display: none; */
+  opacity: 0.5;
 }
 
-.image:hover + .card {
-  display: ;
+div.swiper-button-prev {
+  left: 25px;
 }
+
+div.swiper-button-next {
+  right: 25px;
+}
+
+div.swiper-button-next:hover,
+div.swiper-button-prev:hover {
+  opacity: 1;
+  color: aliceblue;
+}
+
+/* div.card:hover + div.swiper-button-next {
+  display: block;
+}
+div.card:hover + div.swiper-button-prev {
+  display: block;
+} */
